# discussiontemplate

./: .gitignore  CMakeLists.txt
include/: GenFuncs.h
src/: CMakeLists.txt  GenFuncs.cpp  main.cpp
